EWL-8950: Adjust search result styling to prevent load shift, update scripts with new id

--- a/styleguide/source/assets/scss/02-molecules/search-result/_search-result.scss
+++ b/styleguide/source/assets/scss/02-molecules/search-result/_search-result.scss
@@ -50,13 +50,6 @@
     margin-bottom: 14px;
   }
 
-  &__title {
-
-    .ama__search-result--best-bet & {
-      color: $homepagePurple;
-    }
-  }
-
   &:hover .ama__search-result__title {
     text-decoration: underline;
   }
@@ -113,4 +106,8 @@
       }
     }
   }
+}
+
+.ama__search-results__best-bet {
+  border-top: 1px solid $gray-20;
 }
